@@ -34,6 +34,22 @@ a {
 
 
 
+input[type=text], textarea {
+	background: #f5f5f5;
+}
+
+input[type=password], textarea {
+	background: #f5f5f5;
+}
+
+input[type=text]:focus, input[type=password]:focus, textarea:focus {
+	background: #fff;
+	color: #333;
+	border-color: #4A8797;
+}
+
+
+
 a.toplevel, 
 a.toplevel:link, 
 a.toplevel:visited, 
