@@ -71,7 +71,7 @@ Developer Version
 	- 1.5.4 Stable
 	- 1.5.5 Stable
 
-Building Steps: 2761
+Building Steps: 2762
 
 
 
@@ -94,6 +94,7 @@ Building Steps: 2761
               icon, he gets now the default gravatar logo.
  - bug fixed: Gallery administration overview generates an error.
  - bug fixed: The Gallery Frontend has some bugs.
+ - bug fixed: Guestbook title are not using the html class method.
 
  - changed: 
 
